--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "website-portfolio",
   "version": "1.0.0",
+  "homepage": "https://memewei.github.io/minwei-v1/",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "build": "webpack"
