--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website-portfolio",
   "version": "1.0.0",
-  "homepage": "https://memewei.github.io/minwei-v1/",
+  "homepage": "https://memewei.github.io/website-portfolio/",
   "description": "",
   "main": "index.js",
   "scripts": {
